# rustta

./: Cargo.toml  build.rs
rustta_bindgen/: Cargo.toml  build.rs  wrapper.h
rustta_bindgen/src/: ffi.rs  lib.rs  types.rs
rustta_bindgen/src/meta/: flags.rs  func_handle.rs  func_info.rs  func_table.rs  group_table.rs  mod.rs
rustta_bindgen/src/meta/params/: input.rs  mod.rs  opt_input.rs  output.rs  param_holder.rs
src/: indicators.rs  input.rs  lib.rs
