[package]
name = "rustta"
version = "0.1.0"
authors = ["Brady <bradypierce@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rustta_bindgen = { path = "rustta_bindgen" }
derive_builder = "0.10.2"
approx = "0.3.2"

[build-dependencies]
rustta_bindgen = { path = "rustta_bindgen" }
quote = "1.0"
proc-macro2 = "1.0"
